--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
         </div>
     </header>
-    <section class=" color_bg position-relative">
+    <section class=" color_bg position-relative overflow-hidden">
         <div class="d-flex flex-column pos-absolute_2 gap-2 svg_box_2 d-sm-flex d-none">
             <a class="box_03 ps-2 justify-content-center align-items-center social_icon pt-1"
                 href="https://www.facebook.com/" target="_blank">
@@ -345,7 +345,7 @@
                 </h3>
             </div>
             <div
-                class="d-flex gap-xl-3 gap-4 align-items-center justify-content-between text-center overflow-x py-lg-5 py-4">
+                class="d-flex gap-xl-3 gap-4 align-items-center  text-center overflow-x py-lg-5 py-4">
                 <div class="box__">
                     <div class="box_1 position-relative overflow-hidden">
                         <img class="w270 " src="./assets/image/uiuxd.png" alt="uiuxd">
